# Lumi

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  performance.txt
Tex/: references.bib  the_first.tex
src/: main.cpp
src/render/: camera.cpp  camera.h  hittable.cpp  hittable.h  hittable_list.h  interval.cpp  interval.h  material.cpp  material.h  pdf.h  ray.h  render.h  sphere.h  utils.h
src/render/camera/: camera.cpp  camera.h  onb.h
src/render/geometry/: aabb.cpp  aabb.h  bvh.h  hittable.cpp  hittable.h  hittable_list.h  interval.h  quad.h  ray.h  sphere.h
src/render/geometry/bounding/: aabb.cpp  aabb.h  bvh.cpp  bvh.h
src/render/geometry/hittable/: hittable.cpp  hittable.h  hittable_list.cpp  hittable_list.h
src/render/geometry/objects/: quad.cpp  quad.h  sphere.cpp  sphere.h
src/render/gui/imgui/lifecycle/: imgui_lifecycle.cpp  imgui_lifecycle.h
src/render/gui/imgui/render/: imgui_render.cpp  imgui_render.h
src/render/gui/window/: window.cpp  window.h
src/render/init/: quad_texture.h  world.cpp  world.h
src/render/material/: material.cpp  material.h
src/render/shaders/: shader.cpp  shader.h
